按照fork的github中的教程，一个小结一个小节的修改

--- a/02.Spring-Boot-Config/src/main/resources/application.properties
+++ b/02.Spring-Boot-Config/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-mrbird.blog.name=mrbird's blog
-mrbird.blog.title=Spring Boot
-mrbird.blog.wholeTitle=${mrbird.blog.name}--${mrbird.blog.title}
+jinlongxu.blog.name=jinlongxu's blog
+jinlongxu.blog.title=Spring Boot
+jinlongxu.blog.wholeTitle=${jinlongxu.blog.name}--${jinlongxu.blog.title}
 
 spring.profiles.active=dev
+
+issxjl.github.name=issxjl's github
+issxjl.github.title=issxjl demo
+issxjl.github.wholeTitle=${issxjl.github.name}--${issxjl.github.title}
